# hexser

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  MIGRATION_GUIDE.md  PUBLISHING.md  README.md  TASK_PLAN.md  chat-8ce52b86-2bc9-48bd-b813-3ae2d9fe7b02.txt  chat-prev-1.txt  chat-prev-2.txt  chat-prev-3.txt  clippy.toml
.junie/: guidelines.md
docs/: ARCHITECTURE.md  book.toml
examples/: README.md  cqrs_pattern.rs  (+11 more)
hex/hexser_macros/: Cargo.toml
hex/hexser_macros/src/common/: metadata.rs  validation.rs
hex/hexser_macros/src/derive/: query.rs  repository.rs
hex/hexser_macros/src/error/: validation_error_macro.rs
hex/hexser_macros/src/registration/: inventory_gen.rs
hex/hexser_potions/: Cargo.toml
hex_potions/: Cargo.toml
hex_potions/src/: lib.rs
hex_potions/src/auth/: mod.rs
hex_potions/src/crud/: mod.rs
hexser/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
hexser/docs/: ARCHITECTURE.md  MCP_BEGINNER_WALKTHROUGH.md  events.md
hexser/docs/adr/: 0002-one-item-per-file.md  0003-no-imports.md
hexser/docs/src/: SUMMARY.md  architecture.md  core-concepts.md  faq.md  getting-started.md  mcp-tools.md  query-tools.md
hexser/examples/: README.md  architecture_visualization.rs  auth_integration.rs  composite_profile.rs  container_example.rs  cqrs_pattern.rs  graph_example.rs  simple_todo.rs  test_serde_errors.rs  transactional_order.rs  tutorial_01_entity.rs  tutorial_01_hello.rs  tutorial_02_ports.rs  tutorial_02_repository.rs  tutorial_03_adapters.rs  tutorial_04_application.rs  visualization_tutorial.rs  weather_adapter.rs
hexser/examples/realworld_api/: Cargo.toml  README.md  architecture_ai_pack.json  architecture_diagram.mmd  regenerate_diagram.sh
hexser/examples/realworld_api/src/: lib.rs  main.rs
hexser/examples/realworld_api/src/adapters/: mod.rs
hexser/examples/realworld_api/src/adapters/in_memory_db/: article_adapter.rs  comment_adapter.rs  mod.rs  tag_adapter.rs  user_adapter.rs
hexser/examples/realworld_api/src/adapters/web/: article_routes.rs  auth.rs  comment_routes.rs  mod.rs  profile_routes.rs  routes.rs  tag_routes.rs  tests.rs  user_routes.rs
hexser/examples/realworld_api/src/application/: mod.rs
hexser/examples/realworld_api/src/application/article/: create.rs  delete.rs  favorite.rs  feed.rs  get.rs  list.rs  mod.rs  update.rs
hexser/examples/realworld_api/src/application/comment/: add.rs  delete.rs  get.rs  mod.rs
hexser/examples/realworld_api/src/application/profile/: follow.rs  get.rs  mod.rs  unfollow.rs
hexser/examples/realworld_api/src/application/tag/: get_all.rs  mod.rs
hexser/examples/realworld_api/src/application/user/: get_current.rs  login.rs  mod.rs  register.rs  update.rs
hexser/examples/realworld_api/src/domain/: article.rs  comment.rs  mod.rs  tag.rs  user.rs
hexser/examples/realworld_api/src/ports/: article_repository.rs  comment_repository.rs  mod.rs  tag_repository.rs  user_repository.rs
hexser/src/: lib.rs  static_di.rs
hexser/src/adapters/: adapter.rs  in_memory_event_bus.rs  mapper.rs  mcp_stdio.rs  mod.rs
hexser/src/ai/: agent_pack.rs  ai_context.rs  context_builder.rs  method_extractor.rs  mod.rs
hexser/src/application/: directive.rs  directive_handler.rs  mod.rs  query_handler.rs
hexser/src/container/: async_provider.rs  container.rs  container_error.rs  mod.rs  provider.rs  scope.rs
hexser/src/domain/: aggregate.rs  domain_event.rs  domain_service.rs  entity.rs  mod.rs  value_object.rs
hexser/src/domain/mcp/: capabilities.rs  initialize.rs  json_rpc.rs  mod.rs  project_config.rs  project_registry.rs  refresh.rs  resource.rs
hexser/src/error/: ERROR_GUIDE.md  adapter_error.rs  codes.rs  conflict_error.rs  domain_error.rs  env_control.rs  hex_error.rs  layer_error.rs  mod.rs  not_found_error.rs  port_error.rs  rich_error.rs  source_location.rs  validation_error.rs
hexser/src/graph/: builder.rs  hex_edge.rs  hex_graph.rs  hex_node.rs  layer.rs  metadata.rs  mod.rs  node_id.rs  relationship.rs  role.rs
hexser/src/graph/visualization/: mod.rs
hexser/src/graph/visualization/adapters/: dot_exporter.rs  json_exporter.rs  mermaid_exporter.rs
hexser/src/graph/visualization/application/: export_graph.rs
hexser/src/graph/visualization/domain/: mod.rs  visual_edge.rs  visual_graph.rs  visual_node.rs  visual_style.rs
hexser/src/graph/visualization/ports/: format_exporter.rs
hexser/src/infrastructure/: config.rs  mod.rs
hexser/src/ports/: input_port.rs  mcp_server.rs  mod.rs  output_port.rs  query.rs  repository.rs  use_case.rs
hexser/src/ports/events/: cloud_events_envelope.rs  event_codec.rs  event_publisher.rs  event_router.rs  event_subscriber.rs  mod.rs
hexser/src/registry/: component_entry.rs  component_registry.rs  inventory_integration.rs  mod.rs  node_builder.rs  node_info.rs  registrable.rs
hexser/src/result/: hex_result.rs
hexser/src/showcase/: describable.rs  inspectable.rs  mod.rs  visualizable.rs
hexser/src/templates/: mod.rs
hexser/tests/: container_integration_test.rs  env_controlled_serde_test.rs  graph_tests.rs  integration_test.rs  macro_tests.rs
hexser/tutorials/01-hello-hex/: Cargo.toml  README.md
hexser/tutorials/01-hello-hex/src/: main.rs
hexser/tutorials/02-adding-ports/: Cargo.toml
hexser/tutorials/03-implementing-adapters/: Cargo.toml  README.md
hexser/tutorials/04-cqrs-basics/: README.md
hexser/tutorials/05-graph-analysis/: Cargo.toml  README.md
hexser_macros/: Cargo.toml  README.md
hexser_macros/src/: lib.rs
hexser_macros/src/common/: attributes.rs  metadata.rs  validation.rs
hexser_macros/src/derive/: aggregate.rs  directive.rs  entity.rs  hex_adapter.rs  hex_domain.rs  hex_port.rs  hex_value_item.rs  mod.rs  query.rs  repository.rs
hexser_macros/src/error/: adapter_error_macro.rs  domain_error_macro.rs  hex_error_macro.rs  mod.rs  port_error_macro.rs  validation_error_macro.rs
hexser_macros/src/registration/: inventory_gen.rs  mod.rs  node_gen.rs
hexser_potions/: Cargo.toml  README.md
hexser_potions/src/: lib.rs
hexser_potions/src/auth/: mod.rs
hexser_potions/src/crud/: mod.rs
(+151 files in other folders)
