[package]
name = "hexer"
version = "0.3.0"
edition = "2024"
authors = ["N Lang Team"]
description = "Zero-boilerplate hexagonal architecture with graph-based introspection"
license = "MIT OR Apache-2.0"
keywords = ["hexagonal", "architecture", "ports", "adapters", "ddd"]
categories = ["development-tools", "data-structures"]

[workspace]
members = [".", "hex_macros", "hex_potions"]

[dependencies]
inventory = "0.3"
hex_macros = { version = "0.3.0", path = "./hex_macros", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4.42", optional = true }
tokio = {  version = "1.47.1", optional = true, features = ["sync", "macros", "rt-multi-thread", "time"] }
async-trait = {version = "0.1.89", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tokio = { version = "1.47.1", features = ["sync", "macros", "rt-multi-thread", "time"] }

[features]
# Enable macros and static (non-dyn) DI by default. The dyn container remains opt-in.
default = ["macros", "static-di"]
macros = ["hex_macros"]
ai = ["chrono", "serde", "serde_json"]
async = ["tokio", "async-trait"]
visualization = ["serde", "serde_json"]
# Dyn-based container (uses tokio/async-trait). Not enabled by default for WASM-friendliness.
container = ["tokio", "async-trait"]
# Zero-cost, WASM-friendly static DI feature (no extra dependencies).
static-di = []
full = ["ai", "async", "macros", "visualization", "container", "static-di"]

[[bin]]
name = "hex-ai-export"
path = "src/bin/hex_ai_export.rs"
required-features = ["ai"]

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

[package.metadata.docs.rs]
all-features = true
