[workspace]
members = [
  "hexser",
  "hexser_macros",
  "hexser_potions",
]

[workspace.dependencies]
# Shared proc-macro tooling
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Runtime and utility crates
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
tokio = { version = "1.47.1", features = ["sync", "macros", "rt-multi-thread", "time"] }
async-trait = "0.1.89"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
pretty_assertions = "1.4"

# Workspace member crates (for path + version unification)
hexser_macros = { version = "0.4.0", path = "hexser_macros" }
hexser = { version = "0.4.0", path = "hexser" }
