[package]
name = "hexser_macros"
version = "0.3.0"
edition = "2024"
authors = ["N Lang Team"]
description = "Procedural macros for hex hexagonal architecture crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
