[package]
name = "hexser_macros"
version = "0.4.3"
edition = "2024"
authors = ["N Lang Team"]
description = "Procedural macros for the hexser hexagonal architecture crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/squillo/hexser/hexser_macros"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
