[package]
name = "hexser_potions"
version = "0.4.0"
edition = "2024"
authors = ["N Lang Team"]
description = "Potions: ready-to-mix patterns and examples for the hexser crate"
license = "MIT OR Apache-2.0"
keywords = ["hexagonal", "architecture", "examples", "patterns", "ddd"]
repository = "https://github.com/squillo/hexser/hexser_potions"

[dependencies]
hexser = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true
