[package]
name = "hexser_macros"
version = "0.3.0"
edition = "2024"
authors = ["N Lang Team"]
description = "Procedural macros for hex hexagonal architecture crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
