[workspace]

[package]
name = "realworld_api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "realworld_api"
path = "src/lib.rs"

[[bin]]
name = "realworld_api"
path = "src/main.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "generate_architecture_diagram"
path = "src/bin/generate_architecture_diagram.rs"

[dependencies]
hexser = { path = "../../", features = ["macros", "visualization", "ai"] }
inventory = "0.3"
tokio = { version = "1.47.1", features = ["sync", "macros", "rt-multi-thread", "time", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.0"

[dev-dependencies]
